pingpong/gke_manifests/g-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pingpong-dep
  namespace: exercises
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pingpong
  template:
    metadata:
      labels:
        app: pingpong
    spec:
      containers:
        - name: pingpong-container
          image: jouchef/pingpong:2.7
