pingpong/gke_manifests/g-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres-stset
  namespace: exercises
spec:
  serviceName: postgres-svc
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: postgres:16-alpine
          ports:
            - name: db
              containerPort: 5432
          volumeMounts:
            - name: postgres-data-storage
              mountPath: /var/lib/postgresql/data
              subPath: postgres
  volumeClaimTemplates:
    - metadata:
        name: postgres-data-storage
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 100Mi
