pingpong/gke_manifests/g-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pingpong-svc
  namespace: exercises
spec:
  type: LoadBalancer
  selector:
    app: pingpong
  ports:
    - port: 80
      protocol: TCP
      targetPort: 3002
---

apiVersion: v1
kind: Service
metadata:
  name: postgres-svc
  namespace: exercises
  labels:
    app: postgres
spec:
  ports:
  - port: 5432
    name: db
  clusterIP: None
  selector:
    app: postgres
